--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Waldir Marquez Portfolio</title>
+    <link rel="shortcut icon" href="img/waldir.ico" type="image/x-icon">
+    
     <!-- Swipter CSS -->
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <!-- CSS -->
@@ -14,6 +15,27 @@
    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- Primary Meta Tags -->
+    <title>Waldir Marquez Portfolio</title>
+    <meta name="title" content="Waldir Marquez Portfolio">
+    <meta name="description" content="Hello world! It's me, Waldir. Take a look to my portfolio.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://portfolio-elmarqueze.vercel.app/">
+    <meta property="og:title" content="Waldir Marquez Portfolio">
+    <meta property="og:description" content="Hello world! It's me, Waldir. Take a look to my portfolio.">
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://portfolio-elmarqueze.vercel.app/">
+    <meta property="twitter:title" content="Waldir Marquez Portfolio">
+    <meta property="twitter:description" content="Hello world! It's me, Waldir. Take a look to my portfolio.">
+    <meta property="twitter:image" content="">
+
+    <title>Waldir Marquez Portfolio</title>
 </head>
 <body>
     
