se corrigó el tamaño del puesto de Jose Mestanza

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 
                         <div class="detailss">
                             <span class="name">José Mestanza Arias </span>
-                            <span class="job">Digital Strategist in Presidency of the Council of Ministers</span>
+                            <span class="job">Digital Strategist at Presidency of Ministers</span>
                         </div>
                     </div>
                 </div>
