se agregó tindog en el portfolio

--- a/index.html
+++ b/index.html
@@ -515,17 +515,17 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
-                                <h3>VHI Campaign</h3>
-                                <span>Ads of The World</span>
+                                <h3>Tindog</h3>
+                                <span>Website</span>
                             </div>
                             <img src="./img/work6.png" alt="">
                         </div>
                         <div class="portfolio-model flex-center">
                             <div class="portfolio-model-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
-                                <h3>VHI Campaign</h3>
+                                <h3>Tindog</h3>
                                 <img src="./img/work6.png" alt="">
-                                <p>This print ad was made for people that should knows about VHI. We sent to Ads of The World and then they posted on their website in New York<br><br>To watch the full campaign<a href="https://www.behance.net/gallery/69316951/Scotiabank-The-billboard-that-doesnt-charge-anyone" target="_blank"><strong>Click Here</strong></a></p>
+                                <p>This website was made with love for the Dog Lovers Community, you can get into a take a look for a dog that match you with the real pure love.<a href="https://tindog-beige.vercel.app/" target="_blank"><strong>Click Here</strong></a></p>
                             </div>
                         </div>
                     </div>
