actualicé textos en html

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             </div>
             <div class="info">
                 <h2>Hi, I am Waldir</h2>
-                <h3>Front-end Developer</h3>
-                <p>I create stunning websites for your business, highly experienced in ux writing and development.</p>
+                <h3>Sotware Developer in Process</h3>
+                <p>I am a student of software development and now, I am working to increase my profile, doing exercises in some coding courses as a Front-end Developer in this first period and after that, I will go with back-end.</p>
                 <a href="#contact" class="btn">Contact Me <i class="fas fa-arrow-circle-right"></i></a>
             </div>
             <div class="home-img">
@@ -103,21 +103,21 @@
                 <div class="about-info">
                     <div class="description">
                         <h3>I'm Waldir</h3>
-                        <h4>A <span>Front-end Developer</span> based in <span>Lima - Perú</span></h4>
-                        <p>I design and develop services for custumers specializing creating stylish, modern websites, web services and online stores. My passion is to design digital user experiences through meaningful interactions. Check out my portfolio.</p>
+                        <h4>A <span>Software Developer student</span> based in <span>Lima - Perú</span></h4>
+                        <p>I am going first with Front-end development area and then I will go with back-end to start my Fullstack profile. I made this portfolio using some HTML, CSS and Javascript. Take a look my portfolio.</p>
                     </div>
                     <ul class="professional-list">
                         <li class="list-item">
-                            <h3>7+</h3>
-                            <span>Years of<br>Experience</span>
+                            <h3>1+</h3>
+                            <span>Years as<br>student</span>
                         </li>
                         <li class="list-item">
-                            <h3>3+</h3>
+                            <h3>2+</h3>
                             <span>Years<br>UX Writer</span>
                         </li>
                         <li class="list-item">
-                            <h3>30+</h3>
-                            <span>Brands<br>Worked</span>
+                            <h3>7+</h3>
+                            <span>Years as<br>Copywriter</span>
                         </li>
                         
                     </ul>
