actulicé foto HM

--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                                 <h3>HydroMountain</h3>
                                 <span>Website</span>
                             </div>
-                            <img src="./img/work5.jpg" alt="">
+                            <img src="./img/work5.png" alt="">
                         </div>
                         <div class="portfolio-model flex-center">
                             <div class="portfolio-model-body">
