actualice textos prota

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                                 <i class="fas fa-times portfolio-close-btn"></i>
                                 <h3>The Beat App</h3>
                                 <img src="./img/work4.png" alt="">
-                                <p>This campaign was worked at Havas Worldwide Agency in Peru. We create a good idea that won awards at El Ojo de Iberoamerica - Festival.<br><br>To watch the full campaign <a href="https://www.behance.net/gallery/70656715/Beat-The-beat-of-the-city" target="_blank"><strong>Click Here</strong></a></p>
+                                <p>This campaign was worked at Havas Worldwide Agency in Peru. We create a good idea that won awards at El Ojo de Iberoamerica - Festival.<br><br>To watch the full project <a href="https://www.behance.net/gallery/70656715/Beat-The-beat-of-the-city" target="_blank"><strong>Click Here</strong></a></p>
                             </div>
                         </div>
                     </div>
@@ -507,7 +507,7 @@
                                 <i class="fas fa-times portfolio-close-btn"></i>
                                 <h3>HydroMountain</h3>
                                 <img src="./img/work5.png" alt="">
-                                <p>I worked in this website for my last job, it was the first time that they realized a website and introduce in websites, because they have never had one. I used HTML, CSS, SASS and Javascript. <br><br>To watch the full campaign <a href="https://hydromountain.vercel.app/" target="_blank"><strong>Click Here</strong></a></p>
+                                <p>I worked in this website for my last job, it was the first time that they realized a website and introduce in websites, because they have never had one. I used HTML, CSS, SASS and Javascript. <br><br>To watch the full project <a href="https://hydromountain.vercel.app/" target="_blank"><strong>Click Here</strong></a></p>
                             </div>
                         </div>
                     </div>
@@ -525,7 +525,7 @@
                                 <i class="fas fa-times portfolio-close-btn"></i>
                                 <h3>Tindog</h3>
                                 <img src="./img/work6.png" alt="">
-                                <p>This website was made with love for the Dog Lovers Community, you can get into a take a look for a dog that match you with the real pure love.<br><br>To watch the full campaign <a href="https://tindog-beige.vercel.app/" target="_blank"><strong>Click Here</strong></a></p>
+                                <p>This website was made with love for the Dog Lovers Community, you can get into a take a look for a dog that match you with the real pure love.<br><br>To watch the full project <a href="https://tindog-beige.vercel.app/" target="_blank"><strong>Click Here</strong></a></p>
                             </div>
                         </div>
                     </div>
