agregué encriptador a portafolio

--- a/index.html
+++ b/index.html
@@ -479,17 +479,17 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
-                                <h3>The Beat App</h3>
-                                <span>Creative Campaign</span>
+                                <h3>Encrypt App</h3>
+                                <span>Javascript</span>
                             </div>
                             <img src="./img/work4.png" alt="">
                         </div>
                         <div class="portfolio-model flex-center">
                             <div class="portfolio-model-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
-                                <h3>The Beat App</h3>
+                                <h3>Encrypt App</h3>
                                 <img src="./img/work4.png" alt="">
-                                <p>This campaign was worked at Havas Worldwide Agency in Peru. We create a good idea that won awards at El Ojo de Iberoamerica - Festival.<br><br>To watch the full project <a href="https://www.behance.net/gallery/70656715/Beat-The-beat-of-the-city" target="_blank"><strong>Click Here</strong></a></p>
+                                <p>This project was sent by Alura and Oracle Bootcamp, where I study today. You can get into and interactive with it, writing what you want and encrypting it.<br><br>To watch the full project <a href="https://encriptadortexto.vercel.app/" target="_blank"><strong>Click Here</strong></a></p>
                             </div>
                         </div>
                     </div>
