work experience update

--- a/index.html
+++ b/index.html
@@ -141,30 +141,17 @@
                     <div class="education">
                         <h4><label>Education</label></h4>
                         <ul class="edu-list">
-
+                            <li class="item">
+                                <span class="year">2023</span>
+                                <p><span>QA Testing</span> - Coderhouse</p>
+                            </li>
                             <li class="item">
                                 <span class="year">2022-2023</span>
-                                <p><span>Fullstack Developer</span> - Coderhouse</p>
+                                <p><span>Back-end</span> - Oracle</p>
                             </li>
                             <li class="item">
-                                <span class="year">2022-2022</span>
-                                <p><span>Front-end Development</span> - Crehana</p>
-                            </li>
-                            <li class="item">
-                                <span class="year">2022-2022</span>
-                                <p><span>Fundamentals Javascript</span> - Crehana</p>
-                            </li>
-                            <li class="item">
-                                <span class="year">2022-2022</span>
-                                <p><span>Javascript Basics</span> - Domestika</p>
-                            </li>
-                            <li class="item">
-                                <span class="year">2021-2022</span>
-                                <p><span>Course UX Writing</span> - Crehana</p>
-                            </li>
-                            <li class="item">
-                                <span class="year">2015-2017</span>
-                                <p><span>Branding & Design Thinking</span> - UCAL</p>
+                                <span class="year">2022-2023</span>
+                                <p><span>Front-end</span> - Coderhouse</p>
                             </li>
                             <li class="item">
                                 <span class="year">2010-2017</span>
@@ -178,46 +165,33 @@
                         <ul class="bars">
                             <li class="bar">
                                 <div class="info">
-                                    <span>HTML</span>
-                                    <span>95%</span>
+                                    <span>React js</span>
+                                    <span>60%</span>
                                 </div>
-                                <div class="line html"></div>
-                            </li>
-                            <li class="bar">
-                                <div class="info">
-                                    <span>CSS</span>
-                                    <span>85%</span>
-                                </div>
-                                <div class="line css"></div>
-                            </li>
-                            <li class="bar">
-                                <div class="info">
-                                    <span>Bootstrap</span>
-                                    <span>75%</span>
-                                </div>
-                                <div class="line javascript"></div>
-                            </li>
-                            <li class="bar">
-                                <div class="info">
-                                    <span>SASS</span>
-                                    <span>65%</span>
-                                </div>
-                                <div class="line javascript"></div>
+                                <div class="line react"></div>
                             </li>
                             <li class="bar">
                                 <div class="info">
                                     <span>Javascript</span>
-                                    <span>60%</span>
+                                    <span>75%</span>
                                 </div>
                                 <div class="line javascript"></div>
                             </li>
                             <li class="bar">
                                 <div class="info">
-                                    <span>Figma</span>
-                                    <span>75%</span>
+                                    <span>Bootstrap</span>
+                                    <span>80%</span>
                                 </div>
-                                <div class="line figma"></div>
+                                <div class="line bootstrap"></div>
                             </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>SASS</span>
+                                    <span>83%</span>
+                                </div>
+                                <div class="line sass"></div>
+                            </li>
+
                             <li class="bar">
                                 <div class="info">
                                     <span>Git</span>
@@ -228,27 +202,23 @@
                         </ul>
                     </div>
                     <div class="education">
-                        <h4><label>Awards</label></h4>
+                        <h4><label>Courses</label></h4>
                         <ul class="edu-list">
                             <li class="item">
-                                <span class="year">2019</span>
-                                <p><span>Print Ad Published</span>- Ads of the World New York</p>
+                                <span class="year">2022-2022</span>
+                                <p><span>Web Development</span> - Crehana</p>
                             </li>
                             <li class="item">
-                                <span class="year">2018</span>
-                                <p><span>Shortlist</span>- Scotiabank Totem Awards</p>
+                                <span class="year">2022-2022</span>
+                                <p><span>Fundamentals Javascript</span> - Crehana</p>
                             </li>
                             <li class="item">
-                                <span class="year">2018</span>
-                                <p><span>Bendita carpeta</span>- Jury for the festival "Ad Awards"</p>
+                                <span class="year">2022-2022</span>
+                                <p><span>Javascript Basics</span> - Domestika</p>
                             </li>
                             <li class="item">
-                                <span class="year">2018</span>
-                                <p><span>Regional Bronze Award</span>- El Ojo de Iberoamerica</p>
-                            </li>
-                            <li class="item">
-                                <span class="year">2018</span>
-                                <p><span>Shortfilm Broadway Awards</span>-  Los Angeles Broadway International Film Festival</p>
+                                <span class="year">2021-2022</span>
+                                <p><span>Course UX Writing</span> - Crehana</p>
                             </li>
                         </ul>
                     </div>
@@ -260,9 +230,19 @@
                 <div class="skills-info">
                     <div class="experience-card">
                         <div class="upper">
+                            <h3>Software Intern</h3>
+                            <h5>Part-time | Home-office</h5>
+                            <span>2023 - today</span>
+                        </div>
+                        <div class="hr"></div>
+                        <h4><label>POD | California, USA</label></h4>
+                        <p>I worked next to the senior dev, I learn while I practice my coding React for Front-end and if I have free time I practice back-end as well with the senior dev.</p>
+                    </div>
+                    <div class="experience-card">
+                        <div class="upper">
                             <h3>UX Writer</h3>
                             <h5>Full-time | Office</h5>
-                            <span>2021 - today</span>
+                            <span>2021 - 2022</span>
                         </div>
                         <div class="hr"></div>
                         <h4><label>Macga</label></h4>
@@ -277,36 +257,6 @@
                         <div class="hr"></div>
                         <h4><label>Macga</label></h4>
                         <p>I create the digital ideas and conceptualization with agile process to build strong campaigns with digital content and ux writing</p>
-                    </div>
-                    <div class="experience-card">
-                        <div class="upper">
-                            <h3>Senior Copywriter</h3>
-                            <h5>Full-time | InHouse</h5>
-                            <span>2018 - 2019</span>
-                        </div>
-                        <div class="hr"></div>
-                        <h4><label>Havas</label></h4>
-                        <p>Idea and conceptualization for village campaigns, creating copywriting, content strategy, content curation and Storytelling.</p>
-                    </div>
-                    <div class="experience-card">
-                        <div class="upper">
-                            <h3>Copywriter</h3>
-                            <h5>Full-time | InHouse</h5>
-                            <span>2016 - 2017</span>
-                        </div>
-                        <div class="hr"></div>
-                        <h4><label>Fahrenheit DDB</label></h4>
-                        <p>Idea and conceptualization ATL / BTL / Digital campaigns, creating copywriting, content strategy, content curation and Storytelling.</p>
-                    </div>
-                    <div class="experience-card">
-                        <div class="upper">
-                            <h3>Junior Copywriter</h3>
-                            <h5>Full-time | InHouse</h5>
-                            <span>2014 - 2016</span>
-                        </div>
-                        <div class="hr"></div>
-                        <h4><label>Somark</label></h4>
-                        <p>Idea and conceptualization for digital campaigns, creating copywriting, content strategy, post planning, Facebook, Twitter and Instagram insights, content curation.</p>
                     </div>
                 </div>
             </div>
