--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a class="active" href="#home">Home</a>
                     <a href="#about">About</a>
                     <a href="#skills">Skills</a>
-                    <a href="#services">Services</a>
+                    <!-- <a href="#services">Services</a> -->
                     <a href="#portfolio">Portfolio</a>
                     <a href="#contact">Contact</a>
                 </div>
@@ -81,7 +81,7 @@
             <div class="info">
                 <h2>Hi, I am Waldir</h2>
                 <h3>Sotware Developer in Process</h3>
-                <p>I am a student of software development and now, I am working to increase my profile, doing exercises in some coding courses as a Front-end Developer in this first period and after that, I will go with back-end.</p>
+                <p>I am a student of Front-end in Coderhouse with React and Back-end in Oracle with Java Spring.</p>
                 <a href="#contact" class="btn">Contact Me <i class="fas fa-arrow-circle-right"></i></a>
             </div>
             <div class="home-img">
@@ -104,7 +104,7 @@
                     <div class="description">
                         <h3>I'm Waldir</h3>
                         <h4>A <span>Software Developer student</span> based in <span>Lima - Perú</span></h4>
-                        <p>I am going first with Front-end development area and then I will go with back-end to start my Fullstack profile. I made this portfolio using some HTML, CSS and Javascript. Take a look my portfolio.</p>
+                        <p>I am going to be the best Full-stack Developer of Peru, I promise. That is why I made this portfolio to expose by myself to the IT world.</p>
                     </div>
                     <ul class="professional-list">
                         <li class="list-item">
@@ -135,7 +135,7 @@
             <div class="content">
                 <div class="skills-description">
                     <h3>Education & Skills</h3>
-                    <p>For more than 7 years our experts have been accomplishing enough with modern Web development, new generation web and app programming language.</p>
+                    <p>I used to be a Copywriter for the last 7 years of my life, byt the last 2 years I decided to started my path as a future software developer, then I said by myself I would be the next software developer what the worlds will need.</p>
                 </div>
                 <div class="skills-info education-all">
                     <div class="education">
@@ -264,7 +264,7 @@
     </section>
 
     <!--=============== Services section ===============-->
-    <section class="services section" id="services">
+    <!-- <section class="services section" id="services">
         <div class="container flex-center">
             <h1 class="section-title-01">Services</h1>
             <h2 class="section-title-02">Services</h2>
@@ -362,7 +362,7 @@
                 </ul>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!--=============== Portfolio section ===============-->
     <section class="portfolio section" id="portfolio">
