--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             </div>
             <div class="info">
                 <h2>Hi, I am Waldir</h2>
-                <h3>Sotware Developer in Process</h3>
-                <p>I am a student of Front-end in Coderhouse with React and Back-end in Oracle with Java Spring.</p>
+                <h3>Software Developer</h3>
+                <p>I am currently improving my skills studying Back-end in Oracle Next Education with Java.</p>
                 <a href="#contact" class="btn">Contact Me <i class="fas fa-arrow-circle-right"></i></a>
             </div>
             <div class="home-img">
@@ -103,13 +103,13 @@
                 <div class="about-info">
                     <div class="description">
                         <h3>I'm Waldir</h3>
-                        <h4>A <span>Software Developer student</span> based in <span>Lima - Perú</span></h4>
+                        <h4>A <span>Software Developer</span> based in <span>Lima - Perú</span></h4>
                         <p>I am going to be the best Full-stack Developer of Peru, I promise. That is why I made this portfolio to expose by myself to the IT world.</p>
                     </div>
                     <ul class="professional-list">
                         <li class="list-item">
                             <h3>1+</h3>
-                            <span>Years as<br>student</span>
+                            <span>Years as<br>Intern & Student</span>
                         </li>
                         <li class="list-item">
                             <h3>2+</h3>
@@ -173,9 +173,16 @@
                             <li class="bar">
                                 <div class="info">
                                     <span>Javascript</span>
-                                    <span>75%</span>
+                                    <span>70%</span>
                                 </div>
                                 <div class="line javascript"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>Node.js</span>
+                                    <span>60%</span>
+                                </div>
+                                <div class="line node"></div>
                             </li>
                             <li class="bar">
                                 <div class="info">
@@ -231,7 +238,7 @@
                     <div class="experience-card">
                         <div class="upper">
                             <h3>Software Intern</h3>
-                            <h5>Part-time | Home-office</h5>
+                            <h5>Full-time | Home-office</h5>
                             <span>2023 - today</span>
                         </div>
                         <div class="hr"></div>
@@ -375,6 +382,24 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
+                                <h3>AlertApp</h3>
+                                <span>WebApp</span>
+                            </div>
+                            <img src="./img/AlertApp.png" alt="AlertApp">
+                        </div>
+                        <div class="portfolio-model flex-center">
+                            <div class="portfolio-model-body">
+                                <i class="fas fa-times portfolio-close-btn"></i>
+                                <h3>Deck Card Game</h3>
+                                <img src="./img/AlertApp.png" alt="AlertApp">
+                                <p>This web application was made in my Javascript course at Coderhouse, I decided to create it to help bikers to send an alert to their contacts when they suffer any accident. <br><br>To watch the full project <a href="https://alertbutton.vercel.app/" target="_blank"><strong>Click Here</strong></a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
                                 <h3>Deck Card</h3>
                                 <span>Game</span>
                             </div>
@@ -386,6 +411,24 @@
                                 <h3>Deck Card Game</h3>
                                 <img src="./img/work1.png" alt="">
                                 <p>I made a Deck Cards Game using HMTL, CSS and Javascript. This project is part of the learing in one of my courses at Domestika, where I studied Javascript Fundamentals. <br><br>To watch the full project <a href="https://elmarqueze.github.io/barajadecartas/" target="_blank"><strong>Click Here</strong></a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>GianHernández</h3>
+                                <span>Portfolio</span>
+                            </div>
+                            <img src="./img/gian-porta2.png" alt="portfolio">
+                        </div>
+                        <div class="portfolio-model flex-center">
+                            <div class="portfolio-model-body">
+                                <i class="fas fa-times portfolio-close-btn"></i>
+                                <h3>Deck Card Game</h3>
+                                <img src="./img/gian-porta.png" alt="portfolio">
+                                <p>I helped my friend Gian with his last portfolio that was really old, so that I put hands on it and I create for him this new one. <br><br>To watch the full project <a href="https://gianhernandez-o8yqz3kwl-elmarqueze.vercel.app/#" target="_blank"><strong>Click Here</strong></a></p>
                             </div>
                         </div>
                     </div>
