--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="info">
                 <h2>Hi, I am Waldir</h2>
                 <h3>Software Developer</h3>
-                <p>I am currently improving my skills studying Back-end in Oracle Next Education with Java.</p>
+                <p>I am currently improving my skills in Front-end and studying Back-end in Oracle Next Education with Java Spring.</p>
                 <a href="#contact" class="btn">Contact Me <i class="fas fa-arrow-circle-right"></i></a>
             </div>
             <div class="home-img">
@@ -142,10 +142,6 @@
                         <h4><label>Education</label></h4>
                         <ul class="edu-list">
                             <li class="item">
-                                <span class="year">2023</span>
-                                <p><span>QA Testing</span> - Coderhouse</p>
-                            </li>
-                            <li class="item">
                                 <span class="year">2022-2023</span>
                                 <p><span>Back-end</span> - Oracle</p>
                             </li>
@@ -165,22 +161,29 @@
                         <ul class="bars">
                             <li class="bar">
                                 <div class="info">
+                                    <span>Vue js</span>
+                                    <span>40%</span>
+                                </div>
+                                <div class="line vue"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
                                     <span>React js</span>
-                                    <span>60%</span>
+                                    <span>50%</span>
                                 </div>
                                 <div class="line react"></div>
                             </li>
                             <li class="bar">
                                 <div class="info">
                                     <span>Javascript</span>
-                                    <span>70%</span>
+                                    <span>75%</span>
                                 </div>
                                 <div class="line javascript"></div>
                             </li>
                             <li class="bar">
                                 <div class="info">
                                     <span>Node.js</span>
-                                    <span>60%</span>
+                                    <span>40%</span>
                                 </div>
                                 <div class="line node"></div>
                             </li>
@@ -194,7 +197,7 @@
                             <li class="bar">
                                 <div class="info">
                                     <span>SASS</span>
-                                    <span>83%</span>
+                                    <span>80%</span>
                                 </div>
                                 <div class="line sass"></div>
                             </li>
@@ -202,7 +205,7 @@
                             <li class="bar">
                                 <div class="info">
                                     <span>Git</span>
-                                    <span>80%</span>
+                                    <span>70%</span>
                                 </div>
                                 <div class="line git"></div>
                             </li>
@@ -212,19 +215,23 @@
                         <h4><label>Courses</label></h4>
                         <ul class="edu-list">
                             <li class="item">
-                                <span class="year">2022-2022</span>
+                                <span class="year">2023</span>
+                                <p><span>QA Testing</span> - Coderhouse</p>
+                            </li>
+                            <li class="item">
+                                <span class="year">2022</span>
                                 <p><span>Web Development</span> - Crehana</p>
                             </li>
                             <li class="item">
-                                <span class="year">2022-2022</span>
+                                <span class="year">2022</span>
                                 <p><span>Fundamentals Javascript</span> - Crehana</p>
                             </li>
                             <li class="item">
-                                <span class="year">2022-2022</span>
+                                <span class="year">2022</span>
                                 <p><span>Javascript Basics</span> - Domestika</p>
                             </li>
                             <li class="item">
-                                <span class="year">2021-2022</span>
+                                <span class="year">2021</span>
                                 <p><span>Course UX Writing</span> - Crehana</p>
                             </li>
                         </ul>
@@ -378,6 +385,42 @@
             <h2 class="section-title-02">Portfolio</h2>
             <div class="content">
                 <div class="portfolio-list">
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>Add Favorite Number</h3>
+                                <span>Vue3 - App</span>
+                            </div>
+                            <img src="./img/vue1.png" alt="AlertApp">
+                        </div>
+                        <div class="portfolio-model flex-center">
+                            <div class="portfolio-model-body">
+                                <i class="fas fa-times portfolio-close-btn"></i>
+                                <h3>Vue3 - App</h3>
+                                <img src="./img/vue1.png" alt="AlertApp">
+                                <p>This web application was made with Vue.js using the best practices in this Framework to chose a number, add and delete it if you want. <br><br>To watch the full project <a href="https://contador-vue-3.netlify.app/" target="_blank"><strong>Click Here</strong></a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>My Favorite Post</h3>
+                                <span>Vue3 - App</span>
+                            </div>
+                            <img src="./img/vue2.1.png" alt="AlertApp">
+                        </div>
+                        <div class="portfolio-model flex-center">
+                            <div class="portfolio-model-body">
+                                <i class="fas fa-times portfolio-close-btn"></i>
+                                <h3>Vue3 - App</h3>
+                                <img src="./img/vue2.png" alt="AlertApp">
+                                <p>This web application was made with Vue.js the API Composition, creating Components and working with a fake API to use fetch. <br><br>To watch the full project <a href="https://posts-vue3.netlify.app/" target="_blank"><strong>Click Here</strong></a></p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="img-card-container">
                         <div class="img-card">
                             <div class="overlay"></div>
