add new portfolio works

--- a/index.html
+++ b/index.html
@@ -407,6 +407,24 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
+                                <h3>E-commerce</h3>
+                                <span>React js</span>
+                            </div>
+                            <img src="./img/react1.png" alt="AlertApp">
+                        </div>
+                        <div class="portfolio-model flex-center">
+                            <div class="portfolio-model-body">
+                                <i class="fas fa-times portfolio-close-btn"></i>
+                                <h3>React - E-commerce</h3>
+                                <img src="./img/react2.png" alt="AlertApp">
+                                <p>This web application was made with React.js using the best practices in this Framework to show a CartWidget and Checkout form. <br><br>To watch the full project <a href="https://react-ecommerce-coderhouse.netlify.app/" target="_blank"><strong>Click Here</strong></a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
                                 <h3>My Favorite Post</h3>
                                 <span>Vue3 - App</span>
                             </div>
@@ -426,14 +444,14 @@
                             <div class="overlay"></div>
                             <div class="info">
                                 <h3>AlertApp</h3>
-                                <span>WebApp</span>
+                                <span>Vanilla JS</span>
                             </div>
                             <img src="./img/AlertApp.png" alt="AlertApp">
                         </div>
                         <div class="portfolio-model flex-center">
                             <div class="portfolio-model-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
-                                <h3>Deck Card Game</h3>
+                                <h3>Vanilla JS</h3>
                                 <img src="./img/AlertApp.png" alt="AlertApp">
                                 <p>This web application was made in my Javascript course at Coderhouse, I decided to create it to help bikers to send an alert to their contacts when they suffer any accident. <br><br>To watch the full project <a href="https://alertbutton.vercel.app/" target="_blank"><strong>Click Here</strong></a></p>
                             </div>
@@ -443,7 +461,7 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
-                                <h3>Deck Card</h3>
+                                <h3>Deck Card - JS</h3>
                                 <span>Game</span>
                             </div>
                             <img src="./img/work1.png" alt="">
@@ -451,7 +469,7 @@
                         <div class="portfolio-model flex-center">
                             <div class="portfolio-model-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
-                                <h3>Deck Card Game</h3>
+                                <h3>Deck Card Game - JS</h3>
                                 <img src="./img/work1.png" alt="">
                                 <p>I made a Deck Cards Game using HMTL, CSS and Javascript. This project is part of the learing in one of my courses at Domestika, where I studied Javascript Fundamentals. <br><br>To watch the full project <a href="https://elmarqueze.github.io/barajadecartas/" target="_blank"><strong>Click Here</strong></a></p>
                             </div>
